float operations added, some keyboard events added

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             </div>
             <div class="number-grid">
                 <div class="box"><p>AC</p></div>
-                <div class="box"><p>/</p></div>
+                <div class="box"><p>+</p></div>
                 <div class="box"><p>0</p></div>
                 <div class="box special"><p>.</p></div>
                 <div class="box"><p>7</p></div>
                 <div class="box"><p>8</p></div>
                 <div class="box"><p>9</p></div>
-                <div class="box special"><p>x</p></div>
+                <div class="box special"><p>*</p></div>
                 <div class="box"><p>4</p></div>
                 <div class="box"><p>5</p></div>
                 <div class="box"><p>6</p></div>
